# fastapi-application

./: README.md  docker-compose.yml
app/src/: app.py  main.py
app/src/crud/: crud.py
app/src/schema/: schemas.py
backend/: pyproject.toml
backend/src/: app.py  main.py
backend/src/crud/: crud.py
backend/src/database/: database.py  models.py
backend/src/schema/: schemas.py
docker/: Dockerfile
docker/backend/: Dockerfile
script/: bash  build  fastapi  streamlit
